corrigo divisor sendo ocultado em layout errado

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                   Baixar
                 </a>
               </li>
-              <div class="separador d-md-none d-lg-block"></div>
+              <div class="separador d-none d-xxl-block d-xl-block d-lg-block"></div>
               <li class="nav-item">
                 <a class="nav-link" href="">
                   Inscrever-se
