--- a/index.html
+++ b/index.html
@@ -48,7 +48,31 @@
             </ul>
           </nav>
         </nav>      
-    </header>      
+    </header>
+    <main>
+      <div class="section1">
+        <section class="container ">
+        <h1>
+          Aproveite 1 mês grátis de Premium
+        </h1>
+        <p class="initDescripion">
+          Depois, pague somente R$21,90/mês. Cancele quando quiser
+        </p>
+        <div class="d-flex flex-column flex-md-row ">
+          <a class="btn btn-dark rounded-pill"  href="#">
+            COMECE AGORA
+          </a>
+          <a class="btn btn-outline-light rounded-pill " href="#">
+            VER PLANOS
+          </a>
+        </div>
+        <p class="termo_condições pb-4">
+          <a href="">Sujeito a Termos e Condições.</a>
+          O mês grátis não está disponível para usuários que já experimentaram o Premium.
+        </p>
+      </section></div>
+    </main>
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/f73ef49375.js" crossorigin="anonymous"></script>
   </body>
