insiro segundo section no projeto

--- a/index.html
+++ b/index.html
@@ -74,7 +74,63 @@
         </section>
       </div>
       <!-- inicio da segunda section -->
-      
+      <section class="section2">
+        <div class="container">
+          <h1 class="text-center">
+            Por que ser Premium?
+          </h1>
+          <div class="section2-layout">
+            <div>
+              <div class="iconSectionTwo">
+                <i class="fa-solid fa-music fa-2xl" style="color: #000000;"></i>
+                <div>
+                  <h2>
+                  Modo Offline.
+                  </h2>
+                  <p>                
+                  Ouça música onde estiver.
+                  </p>
+                </div>
+              </div>
+              <div class="iconSectionTwo">
+                <i class="fa-solid fa-comment-slash fa-2xl" style="color: #000000;"></i>
+                <div>
+                  <h2>
+                    Ouça músicas sem anúncios.
+                  </h2>
+                  <p>                
+                  Curta música sem anúncios.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div>
+              <div class="iconSectionTwo">
+                <i class="fa-solid fa-forward-fast fa-2xl" style="color: #000000;"></i>
+                <div>
+                  <h2>
+                    Ouça na ordem que quiser.
+                  </h2>
+                  <p>                
+                  Qualquer música em qualquer ordem.
+                  </p>
+                </div>
+              </div>
+              <div class="d-flex align-items-center iconSectionTwo">
+                <i class="fa-solid fa-headphones  fa-2xl" style="color: #000000;"></i>
+                <div>
+                  <h2>
+                    Qualidade de som superior
+                  </h2>
+                  <p>                
+                  Sinta o som.
+                  </p>
+                </div>
+              </div>
+            </div>         
+          </div>
+        </div>
+      </section>
     </main>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
