--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 <i class="fa-solid fa-headphones  fa-2xl" style="color: #000000;"></i>
                 <div>
                   <h2>
-                    Qualidade de som superior
+                    Qualidade de som superior.
                   </h2>
                   <p>                
                   Sinta o som.
@@ -131,6 +131,60 @@
           </div>
         </div>
       </section>
+      <!-- Inicio da terceira section -->
+      <div class="bgSection3">
+        <section class="container d-flex align-items-center flex-column ">
+          <h1>
+            Escolha seu plano Premium
+          </h1>
+          <p class="descritionh1">
+            Ouça sem limites no seu celular, alto-falante e em outros dispositivos.
+          </p>
+          <div>
+            icon
+          </div>
+          <div class="card">
+            <div class="card-body">
+              <div>
+                <span class="btn btn-primary">
+                  1 mês grátis ao assinar
+                </span>
+                <span class="btn btn-outline-primary">
+                  pagamento único disponível
+                </span>
+              </div>
+              <h2>
+                Individual
+              </h2>
+              <p>
+                R$ 21,90/mês após o período da oferta <br> 1 conta
+              </p>
+              <hr>
+              <ul>
+                <li>
+                    Ouça músicas sem anúncios
+                </li>
+                <li>
+                    Ouça em qualquer lugar - até quando estiver offline
+                </li>
+                <li>
+                    Ouça músicas na ordem que quiser
+                </li>
+                <li>
+                    Faça um plano pré-pago ou uma assinatura
+                </li>
+              </ul>
+              <a class="btn btn-dark rounded-pill d-flex justify-content-center">
+                  COMECE AGORA
+              </a>
+              <p class="termo_condições">
+                <a href="">Sujeito a Termos e Condições.</a>
+                O mês grátis não está disponível para usuários que já experimentaram o Premium.
+              </p>
+            </div>
+          </div>
+        </section>
+      </div>
     </main>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
