--- a/index.html
+++ b/index.html
@@ -143,44 +143,166 @@
           <div>
             icon
           </div>
-          <div class="card">
-            <div class="card-body">
-              <div>
-                <span class="btn btn-primary">
-                  1 mês grátis ao assinar
-                </span>
-                <span class="btn btn-outline-primary">
-                  pagamento único disponível
-                </span>
+          <div class="d-xl-flex">
+            <div class="card">
+              <div class="card-body">
+                <div>
+                  <span class="btn btn-primary">
+                    1 mês grátis ao assinar
+                  </span>
+                  <span class="btn btn-outline-primary">
+                    pagamento único disponível
+                  </span>
+                </div>
+                <h2>
+                  Individual
+                </h2>
+                <p>
+                  R$ 21,90/mês após o período da oferta <br> 1 conta
+                </p>
+                <hr>
+                <ul>
+                  <li>
+                      Ouça músicas sem anúncios
+                  </li>
+                  <li>
+                      Ouça em qualquer lugar - até quando estiver offline
+                  </li>
+                  <li>
+                      Ouça músicas na ordem que quiser
+                  </li>
+                  <li>
+                      Faça um plano pré-pago ou uma assinatura
+                  </li>
+                </ul>
+                <a class="btn btn-dark rounded-pill d-flex justify-content-center">
+                    COMECE AGORA
+                </a>
+                <p class="termo_condições">
+                  <a href="">Sujeito a Termos e Condições.</a>
+                  O mês grátis não está disponível para usuários que já experimentaram o Premium.
+                </p>
               </div>
-              <h2>
-                Individual
-              </h2>
-              <p>
-                R$ 21,90/mês após o período da oferta <br> 1 conta
-              </p>
-              <hr>
-              <ul>
-                <li>
-                    Ouça músicas sem anúncios
-                </li>
-                <li>
-                    Ouça em qualquer lugar - até quando estiver offline
-                </li>
-                <li>
-                    Ouça músicas na ordem que quiser
-                </li>
-                <li>
+            </div>
+            <div class="card">
+              <div class="card-body">
+                <div>
+                  <span class="btn btn-primary">
+                    1 mês grátis ao assinar
+                  </span>
+                  <span class="btn btn-outline-primary">
+                    pagamento único disponível
+                  </span>
+                </div>
+                <h2>
+                  Duo
+                </h2>
+                <p>
+                  R$ 27,90/mês após o período da oferta<br>2 conta
+                </p>
+                <hr>
+                <ul>
+                  <li>
+                      2 contas Premium para pessoas que moram juntas
+                  </li>
+                  <li>
+                      Música sem anúncios, no modo offline e na ordem que você quiser
+                  </li>
+                  <li>
+                      Faça um plano pré-pago ou uma assinatura
+                  </li>                
+                </ul>
+                <a class="btn btn-dark rounded-pill d-flex justify-content-center">
+                    COMECE AGORA
+                </a>
+                <p class="termo_condições">
+                  <a href="">Sujeito a Termos e Condições.</a>
+                  O mês grátis não está disponível para usuários que já experimentaram o Premium.
+                </p>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-body">
+                <div>
+                  <span class="btn btn-primary">
+                    1 mês grátis ao assinar
+                  </span>
+                  <span class="btn btn-outline-primary">
+                    pagamento único disponível
+                  </span>
+                </div>
+                <h2>
+                  Família
+                </h2>
+                <p>
+                  R$ 34,90/mês após o período da oferta<br>Até 6 conta
+                </p>
+                <hr>
+                <ul>
+                  <li>
+                    6 contas Premium para familiares que moram no mesmo endereço
+                  </li>
+                  <li>
+                    Bloqueie músicas com conteúdo explícito
+                  </li>
+                  <li>
+                    Música sem anúncios, no modo offline e na ordem que você quiser
+                  </li>
+                  <li>
+                    Spotify Kids: um app separado, feito especialmente para crianças
+                  </li>
+                  <li>
                     Faça um plano pré-pago ou uma assinatura
-                </li>
-              </ul>
-              <a class="btn btn-dark rounded-pill d-flex justify-content-center">
-                  COMECE AGORA
-              </a>
-              <p class="termo_condições">
-                <a href="">Sujeito a Termos e Condições.</a>
-                O mês grátis não está disponível para usuários que já experimentaram o Premium.
-              </p>
+                  </li>
+                </ul>
+                <a class="btn btn-dark rounded-pill d-flex justify-content-center">
+                    COMECE AGORA
+                </a>
+                <p class="termo_condições">
+                  <a href="">Sujeito a Termos e Condições.</a>
+                  O mês grátis não está disponível para usuários que já experimentaram o Premium.
+                </p>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-body">
+                <div>
+                  <span class="btn btn-primary">
+                    1 mês grátis ao assinar
+                  </span>
+                  <span class="btn btn-outline-primary">
+                    pagamento único disponível
+                  </span>
+                </div>
+                <h2>
+                  Universitário
+                </h2>
+                <p>
+                  R$ 11,90/mês após o período da oferta<br>1 conta
+                </p>
+                <hr>
+                <ul>
+                  <li>
+                    Desconto especial para estudantes universitários elegíveis
+                  </li>
+                  <li>
+                    Ouça músicas sem anúncios
+                  </li>
+                  <li>
+                    Ouça em qualquer lugar — até quando estiver offline
+                  </li>
+                  <li>
+                    Ouça músicas na ordem que quiser
+                  </li>
+                </ul>
+                <a class="btn btn-dark rounded-pill d-flex justify-content-center">
+                    COMECE AGORA
+                </a>
+                <p class="termo_condições">
+                  Oferta disponível somente para estudantes de instituições de ensino superior credenciadas. O mês grátis não está disponível para usuários que já experimentaram o Premium. <a href="">Sujeito a Termos e Condições.</a>
+                  O mês grátis não está disponível para usuários que já experimentaram o Premium.
+                </p>
+              </div>
             </div>
           </div>
         </section>
