adicionarei icon de cartoes em outro momento

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
           <p class="descritionh1">
             Ouça sem limites no seu celular, alto-falante e em outros dispositivos.
           </p>
-          <div>
+          <div class="mb-5">
             icon
           </div>
           <div class="d-xl-flex">
