corrigo nome de class

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         </div>
       </section>
       <!-- Inicio da terceira section -->
-      <div class="bgSection3">
+      <div class="section3">
         <section class="container d-flex align-items-center flex-column ">
           <h1>
             Escolha seu plano Premium
