--- a/index.html
+++ b/index.html
@@ -141,7 +141,14 @@
             Ouça sem limites no seu celular, alto-falante e em outros dispositivos.
           </p>
           <div class="mb-5">
-            icon
+            <i class="fa-brands fa-cc-visa fa-lg" style="color: #000000;"></i>
+            <i class="fa-brands fa-cc-mastercard fa-lg" style="color: #000000;"></i>
+            <i class="fa-brands fa-cc-paypal fa-lg" style="color: #000000;"></i>
+            <i class="fa-brands fa-cc-amex fa-lg" style="color: #000000;"></i>
+            <i class="fa-brands fa-cc-apple-pay fa-lg" style="color: #000000;"></i>
+            <i class="fa-brands fa-cc-stripe fa-lg" style="color: #000000;"></i>
+            <i class="fa-solid fa-closed-captioning fa-lg" style="color: #000000;"></i>
+            <i class="fa-brands fa-cc-discover fa-lg" style="color: #000000;"></i>
           </div>
           <div class="d-xl-flex">
             <div class="card">
